SystemUI: Updated User Sign Up Page

--- a/app/src/main/res/layout/activity_user_sign_up.xml
+++ b/app/src/main/res/layout/activity_user_sign_up.xml
@@ -24,108 +24,214 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_weight="4">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_43sdp"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:layout_marginRight="@dimen/_43sdp"
-            android:background="@drawable/yellow_rounded_corner">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/_15sdp"
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/email"
-                android:layout_width="match_parent"
+            <RelativeLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/username_icon"
-                android:background="@android:color/transparent"
-                android:fontFamily="@font/ubuntu"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:paddingLeft="@dimen/_12sdp"
-                android:paddingTop="@dimen/_10sdp"
-                android:paddingBottom="@dimen/_10sdp"
-                android:textColor="@color/textColor1"
-                android:textSize="@dimen/_15ssp" />
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:background="@drawable/yellow_rounded_corner">
 
-            <ImageView
-                android:id="@+id/username_icon"
-                android:layout_width="@dimen/_15sdp"
-                android:layout_height="@dimen/_15sdp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/_15sdp"
-                android:src="@drawable/ic_mail" />
+                <EditText
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/name_icon"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/ubuntu"
+                    android:hint="Name"
+                    android:inputType="textPersonName"
+                    android:paddingLeft="@dimen/_12sdp"
+                    android:paddingTop="@dimen/_10sdp"
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_15ssp" />
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/name_icon"
+                    android:layout_width="@dimen/_15sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:src="@drawable/ic_person" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_43sdp"
-            android:layout_marginTop="@dimen/_18sdp"
-            android:layout_marginRight="@dimen/_43sdp"
-            android:background="@drawable/yellow_rounded_corner">
+            </RelativeLayout>
 
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
+            <RelativeLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/icon"
-                android:background="@android:color/transparent"
-                android:fontFamily="@font/ubuntu"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:maxLength="10"
-                android:maxLines="1"
-                android:paddingLeft="@dimen/_12sdp"
-                android:paddingTop="@dimen/_10sdp"
-                android:paddingBottom="@dimen/_10sdp"
-                android:textColor="@color/textColor1"
-                android:textSize="@dimen/_15ssp" />
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_18sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:background="@drawable/yellow_rounded_corner">
 
-            <ImageView
-                android:id="@+id/icon"
-                android:layout_width="@dimen/_15sdp"
-                android:layout_height="@dimen/_15sdp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/_15sdp"
-                android:src="@drawable/ic_key" />
+                <EditText
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/email_icon"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/ubuntu"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:paddingLeft="@dimen/_12sdp"
+                    android:paddingTop="@dimen/_10sdp"
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_15ssp" />
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/email_icon"
+                    android:layout_width="@dimen/_15sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:src="@drawable/ic_mail" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_43sdp"
-            android:layout_marginTop="@dimen/_18sdp"
-            android:layout_marginRight="@dimen/_43sdp">
+            </RelativeLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btlogin"
-                android:layout_width="match_parent"
+            <RelativeLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/yellow_fill_rounded"
-                android:fontFamily="@font/ubuntu_medium"
-                android:text="SIGN UP"
-                android:textColor="@color/textColor1"
-                android:textSize="@dimen/_15ssp" />
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_18sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:background="@drawable/yellow_rounded_corner">
 
-        </RelativeLayout>
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/key_icon"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/ubuntu"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:paddingLeft="@dimen/_12sdp"
+                    android:paddingTop="@dimen/_10sdp"
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_15ssp" />
 
-        <ProgressBar
-            android:id="@+id/pp"
-            android:layout_gravity="center"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_marginTop="@dimen/_22sdp"/>
+                <ImageView
+                    android:id="@+id/key_icon"
+                    android:layout_width="@dimen/_15sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:src="@drawable/ic_key" />
 
-    </LinearLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_18sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:background="@drawable/yellow_rounded_corner">
+
+                <EditText
+                    android:id="@+id/address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="@dimen/_1sdp"
+                    android:gravity="top"
+                    android:layout_toRightOf="@+id/address_icon"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/ubuntu"
+                    android:hint="Address"
+                    android:inputType="textMultiLine"
+                    android:paddingLeft="@dimen/_12sdp"
+                    android:paddingTop="@dimen/_10sdp"
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_15ssp" />
+
+                <ImageView
+                    android:id="@+id/address_icon"
+                    android:layout_width="@dimen/_15sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:src="@drawable/ic_business" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_18sdp"
+                android:layout_marginRight="@dimen/_43sdp"
+                android:background="@drawable/yellow_rounded_corner">
+
+                <EditText
+                    android:id="@+id/phNo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/phone_icon"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/ubuntu"
+                    android:hint="Phone No"
+                    android:inputType="number"
+                    android:maxLength="10"
+                    android:paddingLeft="@dimen/_12sdp"
+                    android:paddingTop="@dimen/_10sdp"
+                    android:paddingBottom="@dimen/_10sdp"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_15ssp" />
+
+                <ImageView
+                    android:id="@+id/phone_icon"
+                    android:layout_width="@dimen/_15sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:src="@drawable/ic_phone" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_43sdp"
+                android:layout_marginTop="@dimen/_18sdp"
+                android:layout_marginRight="@dimen/_43sdp">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btlogin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/yellow_fill_rounded"
+                    android:fontFamily="@font/ubuntu_medium"
+                    android:text="SIGN UP"
+                    android:textColor="@color/textColor1"
+                    android:textSize="@dimen/_15ssp" />
+
+            </RelativeLayout>
+
+            <ProgressBar
+                android:id="@+id/pp"
+                android:layout_gravity="center"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:layout_marginTop="@dimen/_22sdp"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
