--- a/app/src/main/res/layout/fragment_user_drop_down_list.xml
+++ b/app/src/main/res/layout/fragment_user_drop_down_list.xml
@@ -68,4 +68,16 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/detailsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
 </LinearLayout>
