--- a/app/src/main/res/layout/item_design.xml
+++ b/app/src/main/res/layout/item_design.xml
@@ -15,13 +15,53 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/hospitalName"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_20ssp" />
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Hospital Name:"
+                        android:textSize="@dimen/_24ssp"/>
+
+                    <TextView
+                        android:id="@+id/hospitalName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/_20ssp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Bed Count: "
+                        android:textSize="@dimen/_24ssp"/>
+
+                    <TextView
+                        android:id="@+id/bedCnt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/_20ssp"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </FrameLayout>
 
