--- a/app/src/main/res/layout/item_design.xml
+++ b/app/src/main/res/layout/item_design.xml
@@ -61,6 +61,26 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Price (per Bed) Rs: "
+                        android:textSize="@dimen/_20ssp"/>
+
+                    <TextView
+                        android:id="@+id/price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/_20ssp"/>
+
+                </LinearLayout>
+
             </LinearLayout>
 
         </FrameLayout>
