--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,4 +11,5 @@
     <color name="mainBack">#292929</color>
     <color name="textColor1">#ffffff</color>
     <color name="iconTint">#ffffff</color>
+    <color name="cardBack">#161616</color>
 </resources>
