--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="mainBack">#f8f8f8</color>
     <color name="textColor1">#2a2a2a</color>
     <color name="iconTint">#2a2a2a</color>
+    <color name="cardBack">@color/white</color>
 </resources>
