Added Admin Password Reset Option

--- a/app/src/main/res/layout/activity_admin_forget_password.xml
+++ b/app/src/main/res/layout/activity_admin_forget_password.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/mainBack"
+    android:orientation="vertical"
     android:weightSum="10"
-    tools:context=".AdminSignIn">
+    tools:context=".AdminForgetPassword">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
         <ImageView
             android:layout_width="@dimen/_70sdp"
             android:layout_height="@dimen/_70sdp"
-            android:src="@drawable/ic_engineering" />
+            android:src="@drawable/ic_lock_reset" />
 
     </LinearLayout>
 
@@ -42,7 +42,7 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/username_icon"
+                android:layout_toRightOf="@+id/email_icon"
                 android:background="@android:color/transparent"
                 android:fontFamily="@font/ubuntu"
                 android:hint="Email"
@@ -55,7 +55,7 @@
                 android:textSize="@dimen/_15ssp" />
 
             <ImageView
-                android:id="@+id/username_icon"
+                android:id="@+id/email_icon"
                 android:layout_width="@dimen/_15sdp"
                 android:layout_height="@dimen/_15sdp"
                 android:layout_centerVertical="true"
@@ -73,13 +73,13 @@
             android:background="@drawable/yellow_rounded_corner">
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/curPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/icon"
+                android:layout_toRightOf="@+id/password_icon"
                 android:background="@android:color/transparent"
                 android:fontFamily="@font/ubuntu"
-                android:hint="Password"
+                android:hint="Current Password"
                 android:inputType="textPassword"
                 android:maxLength="10"
                 android:maxLines="1"
@@ -90,7 +90,7 @@
                 android:textSize="@dimen/_15ssp" />
 
             <ImageView
-                android:id="@+id/icon"
+                android:id="@+id/password_icon"
                 android:layout_width="@dimen/_15sdp"
                 android:layout_height="@dimen/_15sdp"
                 android:layout_centerVertical="true"
@@ -104,41 +104,54 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_43sdp"
             android:layout_marginTop="@dimen/_18sdp"
+            android:layout_marginRight="@dimen/_43sdp"
+            android:background="@drawable/yellow_rounded_corner">
+
+            <EditText
+                android:id="@+id/newPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/new_password_icon"
+                android:background="@android:color/transparent"
+                android:fontFamily="@font/ubuntu"
+                android:hint="New Password"
+                android:inputType="textPassword"
+                android:maxLength="10"
+                android:maxLines="1"
+                android:paddingLeft="@dimen/_12sdp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_10sdp"
+                android:textColor="@color/textColor1"
+                android:textSize="@dimen/_15ssp" />
+
+            <ImageView
+                android:id="@+id/new_password_icon"
+                android:layout_width="@dimen/_15sdp"
+                android:layout_height="@dimen/_15sdp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:src="@drawable/ic_check" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_43sdp"
+            android:layout_marginTop="@dimen/_18sdp"
             android:layout_marginRight="@dimen/_43sdp">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btSignIn"
+                android:id="@+id/btReset"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/yellow_fill_rounded"
                 android:fontFamily="@font/ubuntu_medium"
-                android:text="SIGN IN"
+                android:text="RESET"
                 android:textColor="@color/textColor1"
                 android:textSize="@dimen/_15ssp" />
 
         </RelativeLayout>
-
-        <TextView
-            android:id="@+id/resetPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_22sdp"
-            android:fontFamily="@font/ubuntu_light"
-            android:text="Reset Password"
-            android:textColor="@color/textColor1"
-            android:textSize="@dimen/_11ssp" />
-
-        <TextView
-            android:id="@+id/requestAdmin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/_18sdp"
-            android:fontFamily="@font/ubuntu_light"
-            android:text="Want to be a part of our project? Click Here"
-            android:textColor="@color/textColor1"
-            android:textSize="@dimen/_12ssp" />
 
         <ProgressBar
             android:id="@+id/progressBar"
