--- a/app/src/main/res/layout/activity_user_forget_password.xml
+++ b/app/src/main/res/layout/activity_user_forget_password.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:weightSum="10"
     android:background="@color/mainBack"
-    tools:context=".ForgetPassword">
+    tools:context=".UserForgetPassword">
 
     <LinearLayout
         android:layout_width="match_parent"
